name:                passgen
version:             0.1.0.1
synopsis:            Simple password generator
description:         Please see README.md
homepage:            https://github.com/Tomren3000/passgen
license:             PublicDomain
license-file:        LICENSE
author:              Morten Jensen
maintainer:          tomren3000@gmail.com
copyright:           2016- Morten Jensen
category:            Password
build-type:          Simple
cabal-version:       >=1.10

executable passgen
  main-is:             Passgen.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       random,
                       parseargs >= 0.2 && < 1
  ghc-options:         -Wall
